WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145798
Crash when passing Symbol to NPAPI plugin objects
https://bugs.webkit.org/show_bug.cgi?id=145798
Summary
Crash when passing Symbol to NPAPI plugin objects
Yusuke Suzuki
Reported
2015-06-09 05:57:33 PDT
Crash when passing Symbol to NPAPI plugin objects
Attachments
Patch
(10.59 KB, patch)
2015-06-09 06:02 PDT
,
Yusuke Suzuki
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-06-09 06:02:28 PDT
Created
attachment 254562
[details]
Patch
Anders Carlsson
Comment 2
2015-06-09 07:29:05 PDT
Comment on
attachment 254562
[details]
Patch I think this test should be inside plugins/npruntime.
Yusuke Suzuki
Comment 3
2015-06-09 11:21:49 PDT
OK, I'll move the test to plugins/npruntime and land it :)
Yusuke Suzuki
Comment 4
2015-06-09 11:31:37 PDT
Committed
r185369
: <
http://trac.webkit.org/changeset/185369
>
Yusuke Suzuki
Comment 5
2015-06-09 14:30:40 PDT
Looks JSC tests failed. Investigating...
https://build.webkit.org/builders/Apple%20Yosemite%20Release%20JSC%20%28Tests%29/builds/2627
Yusuke Suzuki
Comment 6
2015-06-09 15:19:33 PDT
This issue is not related to that JSC test failure. I've opened the issue handling it.
https://bugs.webkit.org/show_bug.cgi?id=145820
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug